--- a/source/sass/base/body.scss
+++ b/source/sass/base/body.scss
@@ -1,4 +1,27 @@
-/*body
-html
-a
-img*/
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body {
+  font-size: 14px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  line-height: 24px;
+  font-weight: normal;
+  color: $lighterblack;
+  background-color: $white;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+a {
+  text-decoration: none;
+}
