--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,7 +1,5 @@
 .advantages__list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+  @include reset-list;
 }
 
 .advantages__item {
@@ -12,14 +10,12 @@
     background-color: #81b3d2;
   }
 
-  &--grey{
+  &--grey {
     background-color: #e6e6e6;
   }
-
-   }
+}
 
 .advantages__title {
-  font-family: PTSans;
   font-size: 18px;
   font-weight: bold;
   line-height: 26px;
@@ -30,12 +26,10 @@
   &--white {
     color: #ffffff;
   }
-
 }
 
 .advantages__number,
 .advantages__argument {
-  font-family: PTSans;
   font-size: 14px;
   line-height: 21px;
   text-transform: uppercase;
@@ -45,5 +39,4 @@
   &--white {
     color: #ffffff;
   }
-
 }
