--- a/source/sass/blocks/photo.scss
+++ b/source/sass/blocks/photo.scss
@@ -1,26 +1,24 @@
 .photo__title {
-  font-family: PTSans;
   font-size: 14px;
   font-weight: bold;
   line-height: 24px;
   text-align: left;
   text-transform: uppercase;
-  color:#000000;
+  color: #000000;
 }
 
 .photo__author {
-  font-family: PTSans;
   font-size: 14px;
   font-weight: bold;
-  line-height: 24px;
+  /*line-height*/
   text-align: left;
   color: #333333;
 }
 
 .photo__likes {
-  font-family: PTSans;
   font-size: 14px;
   font-weight: bold;
+  /*line-height*/
   text-align: left;
   color: #000000;
 }
