--- a/source/sass/global/page-header.scss
+++ b/source/sass/global/page-header.scss
@@ -1,11 +1,10 @@
 .page-header {
   background-color: #81b3d2;
-  font-style: PTSans;
   font-size: 18px;
   font-weight: bold;
   line-height: 40px;
   text-transform: uppercase;
   color: #ffffff;
-  box-shadow: 0px 1px 0 0 rgba(1, 1, 1, 0.2), inset 0px 1px 0 0;
+  box-shadow: 1px 0 0 rgba(1, 1, 1, 0.2), inset 1px 0 0;
   text-align: center;
 }
