--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -3,5 +3,6 @@ $grey: #e6e6e6;
 $darkblack: #000000;
 $lighterblack: #333333;
 $white: #ffffff;
-$tablet-width: ;
+$mobile-width: 320px;
+$tablet-width: 768px;
 $desktop-width: 1200px;
