--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,3 +28,6 @@
 @import "blocks/search-hotel.scss";
 @import "blocks/site-list.scss";
 @import "blocks/social.scss";
+@import "blocks/catalog.scss";
+@import "blocks/video.scss";
+@import "blocks/feedback.scss";
