--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -14,3 +14,34 @@
   text-transform: uppercase;
   color: #333333;
 }
+
+.intro__wrapper--image {
+  width: 229px;
+  height: 39px;
+}
+.intro__wrapper--text {
+  padding-top: 44px;
+  margin: 0 auto 33px;
+}
+
+@media (min-width: $tablet-width) {
+  .intro__wrapper--image {
+    width: 768px;
+    height: 346px;
+  }
+.intro__wrapper--text {
+  padding-top: 76px;
+  margin: 0 auto 75px;
+}
+
+}
+@media (min-width: $desktop-width) {
+  .intro__wrapper--image {
+    width: 1200px;
+    height: 357px;
+  }
+  .intro__wrapper--text  {
+    padding-top: 113px;
+    margin: 0 auto 77px;
+  }
+}
