--- a/source/sass/global/main-nav.scss
+++ b/source/sass/global/main-nav.scss
@@ -1,5 +1,18 @@
+.main-nav {
+  width: 320px;
+  margin: 0 auto;
+}
+
 .main-nav__list {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+@media (min-width: $tablet-width) {
+  .main-nav {
+    width: auto;
+    margin: 0 auto;
+  }
+
 }
