--- a/source/sass/global/page-header.scss
+++ b/source/sass/global/page-header.scss
@@ -1,4 +1,6 @@
 .page-header {
+  display: flex;
+  flex-wrap: wrap;
   background-color: #81b3d2;
   font-size: 18px;
   font-weight: bold;
@@ -7,4 +9,32 @@
   color: #ffffff;
   box-shadow: 1px 0 0 rgba(1, 1, 1, 0.2), inset 1px 0 0;
   text-align: center;
+}
+
+.page-header__logo {
+  width: 102px;
+  height: 83px;
+  order: 2;
+}
+@media (min-width: $tablet-width) {
+  .page-header__logo {
+    width: 187px;
+    height: 97px;
+    order: 3;
+  }
+}
+@media (min-width: $desktop-width) {
+  .page-header__logo {
+    width: 188px;
+    height: 96px;
+    order: 3;
+  }
+
+  .site-list__link--left:first-child {
+    order: 1;
+  }
+
+  .site-list__link--left:nth-child(2) {
+    order: 2;
+  }
 }
