--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -19,10 +19,8 @@
   padding: 61px 27px 45px 28px;
   margin-bottom: 33px;
 }
-
-.advantages__item--housing {}
-
 .advantages__title {
+  @include reset-text;
   font-size: 18px;
   font-weight: bold;
   line-height: 26px;
@@ -37,6 +35,7 @@
 
 .advantages__argument,
 .advantages__number {
+  @include reset-text;
   font-size: 14px;
   line-height: 21px;
   text-transform: uppercase;
@@ -52,32 +51,28 @@
   padding-top: 40px;
   margin: 0 auto;
 }
+
 .advantages__item--grey:last-child {
- margin-bottom: 42px;
+  margin-bottom: 42px;
 }
-
-.advantages__wrapper:nth-child(4) {
-  background-color:$grey;
-}
-
 
 @media (min-width: $tablet-width) {
-  .advantages__wrapper {
-   display: flex;
+  .advantages__text-wrapper {
+    display: flex;
   }
   .advantages__item--grey {
-   display: flex;
-   margin-right: 110px;
-   justify-content: space-between;
+    display: flex;
+    margin-right: 110px;
+    justify-content: space-between;
   }
 }
 
 @media (min-width: $desktop-width) {
-  .advantages__wrapper {
-   display: flex;
+  .advantages__text-wrapper {
+    display: flex;
   }
   .advantages__item--grey {
-   display: flex;
-   margin-right: 130px;
+    display: flex;
+    margin-right: 130px;
   }
 }
