--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -1,4 +1,239 @@
 .feedback {
-  padding-top: 40px;
-  margin-bottom: 51px;
+  @include reset-fieldset;
+  padding-top: 24px;
+  margin: 0 auto 47px;
+}
+
+.feedback__list {
+  @include reset-list;
+}
+
+.feedback__fieldset {
+  @include reset-fieldset;
+  padding-top: 24px;
+  padding-bottom: 25px;
+}
+
+.feedback__fieldset--contact-information {
+  padding-bottom: 28px;
+}
+
+.feedback__fieldset--your-impressions {
+  padding-bottom: 26px;
+}
+
+.feedback__fieldset--sightseengs-visited {
+  padding-bottom: 25px;
+}
+
+.feedback__fieldset--your-emotions {
+  padding-bottom: 51px;
+}
+
+.feedback__title {
+  @include reset-text;
+  color: $darkblack;
+  font-size: 18px;
+  font-weight: bold;
+  font-style: normal;
+  text-transform: uppercase;
+  line-height: 26px;
+  text-align: center;
+  padding-bottom: 25px;
+
+}
+
+.feedback__title--contact-information {
+  @include reset-text;
+  font-size: 18px;
+  font-weight: bold;
+  color: $darkblack;
+  font-style: normal;
+  text-transform: uppercase;
+  line-height: 26px;
+  text-align: center;
+  padding-top: 24px;
+  margin-bottom: 29px;
+
+}
+
+.feedback__title--your-impressions {
+  @include reset-text;
+  font-size: 18px;
+  font-weight: bold;
+  color: $darkblack;
+  font-style: normal;
+  text-transform: uppercase;
+  line-height: 26px;
+  text-align: center;
+  padding-top: 24px;
+  margin-bottom: 32px;
+}
+
+.feedback__title--sightseengs-visited {
+  @include reset-text;
+  font-size: 18px;
+  font-weight: bold;
+  color: $darkblack;
+  font-style: normal;
+  text-transform: uppercase;
+  line-height: 26px;
+  text-align: center;
+  padding-top: 24px;
+  margin-bottom: 26px;
+}
+
+.feedback__title--your-emotions {
+  @include reset-text;
+  font-size: 18px;
+  font-weight: bold;
+  color: $darkblack;
+  font-style: normal;
+  text-transform: uppercase;
+  line-height: 26px;
+  text-align: center;
+  padding-top: 24px;
+  margin-bottom: 21px;
+}
+
+@media (min-width: $tablet-width) {
+  .feedback {
+    padding-top: 84px;
+    padding-left: 60px;
+    padding-right: 60px;
+    margin-bottom: 61px;
+  }
+
+  .feedback__fieldset {
+    @include reset-fieldset;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .feedback__fieldset--your-impressions {
+    order: 1;
+    width: 324px;
+  }
+
+  .feedback__fieldset--present-yourself {
+    order: 2;
+    width: 324px;
+  }
+
+  .feedback__fieldset--contact-information {
+    width: 648px;
+  }
+
+  .feedback__fieldset--sightseengs-visited {
+    width: 648px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .feedback__fieldset--your-emotions {
+    width: 648px;
+  }
+
+  .feedback__title {
+    font-size: 21px;
+    color: $darkblack;
+    font-weight: bold;
+    font-style: normal;
+    line-height: 26px;
+    text-align: left;
+    width: 163px;
+    margin-bottom: 60px;
+  }
+
+  .feedback__title--your-impressions {
+    text-align: left;
+    width: 273px;
+    margin-bottom: 67px;
+  }
+
+  .feedback__title--contact-information {
+    text-align: center;
+    width: 297px;
+    margin-bottom: 32px;
+  }
+
+  .feedback__title--sightseengs-visited {
+    text-align: center;
+    width: 278px;
+    margin-bottom: 48px;
+  }
+
+  .feedback__title--your-emotions {
+    text-align: center;
+    width: 250px;
+    margin-bottom: 60px;
+  }
+}
+@media (min-width: $desktop-width) {
+  .feedback {
+    padding-top: 70px;
+    padding-left: 129px;
+    padding-right: 120px;
+    margin-bottom: 66px;
+  }
+
+  .feedback__fieldset {
+    @include reset-fieldset;
+    display: flex;
+    flex-wrap: wrap;
+    order: 2;
+    width: 386px;
+  }
+
+  .feedback__fieldset--your-impressions {
+    order: 1;
+    width: 386px;
+  }
+
+  .feedback__fieldset--contact-information {
+    width: 960px;
+  }
+
+  .feedback__fieldset--sightseengs-visited {
+    width: 960px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .feedback__fieldset--your-emotions {
+    width: 960px;
+  }
+
+  .feedback__title {
+    font-size: 21px;
+    color: $darkblack;
+    font-weight: bold;
+    font-style: normal;
+    line-height: 26px;
+    text-align: left;
+  }
+
+  .feedback__title--your-impressions {
+    text-align: left;
+    width: 273px;
+    margin-bottom: 67px;
+  }
+
+  .feedback__title--contact-information {
+    text-align: center;
+    width: 279px;
+    margin-bottom: 77px;
+  }
+
+  .feedback__title--sightseengs-visited {
+    text-align: center;
+    width: 278px;
+    margin-bottom: 50px;
+  }
+
+  .feedback__title--your-emotions {
+    text-align: center;
+    width: 250px;
+    margin-bottom: 60px;
+  }
 }
