--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,13 +1,16 @@
 .intro__title {
+  @include reset-text;
   font-size: 18px;
   font-weight: bold;
   line-height: 26px;
   text-align: center;
   text-transform: uppercase;
   color: #000000;
+  padding-bottom: 40px;
 }
 
 .intro__text {
+  @include reset-text;
   font-size: 14px;
   line-height: 24px;
   text-align: center;
@@ -15,32 +18,32 @@
   color: #333333;
 }
 
-.intro__wrapper--image {
+.intro__wrapper-image {
   width: 229px;
   height: 39px;
 }
-.intro__wrapper--text {
+.intro__wrapper-text {
   padding-top: 44px;
   margin: 0 auto 33px;
 }
 
 @media (min-width: $tablet-width) {
-  .intro__wrapper--image {
+  .intro__wrapper-image {
     width: 768px;
     height: 346px;
   }
-.intro__wrapper--text {
+.intro__wrapper-text {
   padding-top: 76px;
   margin: 0 auto 75px;
 }
 
 }
 @media (min-width: $desktop-width) {
-  .intro__wrapper--image {
+  .intro__wrapper-image {
     width: 1200px;
     height: 357px;
   }
-  .intro__wrapper--text  {
+  .intro__wrapper-text  {
     padding-top: 113px;
     margin: 0 auto 77px;
   }
