--- a/source/sass/blocks/photo.scss
+++ b/source/sass/blocks/photo.scss
@@ -1,4 +1,5 @@
 .photo__title {
+  @include reset-text;
   font-size: 14px;
   font-weight: bold;
   line-height: 24px;
@@ -8,6 +9,7 @@
 }
 
 .photo__author {
+  @include reset-text;
   font-size: 14px;
   font-weight: bold;
   /*line-height*/
@@ -16,6 +18,7 @@
 }
 
 .photo__likes {
+  @include reset-text;
   font-size: 14px;
   font-weight: bold;
   line-height: 24px;
@@ -47,3 +50,4 @@
     display: flex;
     /*transparent?? captions on the photo???*/
   }
+}
