--- a/source/sass/global/main-nav.scss
+++ b/source/sass/global/main-nav.scss
@@ -4,9 +4,7 @@
 }
 
 .main-nav__list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+  @include reset-list;
 }
 
 @media (min-width: $tablet-width) {
