--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,19 +1,16 @@
 .social__list {
   @include reset-list;
   list-style: none;
-  margin: 0;
   padding: 0;
-}
-
-.tag {
-  font-weight: bold;
-  font-size: 21px;
-  line-height: 26px;
-  text-align: center;
-  text-transform: uppercase;
-  color: #000000;
+  margin: 0;
+  margin-right: 6px;
+  justify-content: space-between;
 }
 
 .social__link {
   text-decoration: none;
+}
+
+.social__list:last-child {
+  margin-right: 0;
 }
