--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,6 +14,7 @@
 @import "base/body.scss";
 
 /*global*/
+@import "global/container.scss";
 @import "global/main-nav.scss";
 @import "global/page-header.scss";
 @import "global/page-footer.scss";
