--- a/source/sass/base/body.scss
+++ b/source/sass/base/body.scss
@@ -14,7 +14,7 @@ body {
   line-height: 24px;
   font-weight: normal;
   color: $lighterblack;
-  background-color: $white;
+  background-color: $white-greyish;
 }
 
 img {
