--- a/source/sass/blocks/photo.scss
+++ b/source/sass/blocks/photo.scss
@@ -12,7 +12,7 @@
   @include reset-text;
   font-size: 14px;
   font-weight: bold;
-  /*line-height*/
+  line-height: 24px;
   text-align: left;
   color: #333333;
 }
@@ -27,10 +27,10 @@
 }
 
 .photo__wrapper {
-  padding-top: 22px;
-  padding-bottom: 23px;
   margin-left: 20px;
   margin-right: 120px;
+  padding-top: 22px;
+  padding-bottom: 23px;
 }
 
 @media (min-width: $tablet-width) {
