--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -1,8 +1,127 @@
 .site-list {
   @include reset-list;
+  font-weight: bold;
 }
 
 .site-list__link {
+  display: block;
+  padding-top: 20px;
+  padding-bottom: 20px;
+
+  font-size: 18px;
+  line-height: 40px;
+  color: $white;
+  text-transform: uppercase;
   text-decoration: none;
-  color: white;
+
+  background-color: $lightblue;
+  box-shadow: 0 1px 0 0 rgba(1, 1, 1, 0.2), inset 0 1px 0 0 rgba(255, 255, 255, 0.2);
 }
+
+.site-list a[href] {
+  &:hover {
+    background-color: #669ec0;
+  }
+
+  &:active {
+    color: rgba(255, 255, 255, 0.3);
+    background-color: #5496bd;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .site-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    background-color: $white;
+  }
+
+  .site-list__item {
+    margin-right: 25px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+
+  .site-list__link {
+    padding: 25px 0 23px;
+
+    background: none;
+    border: none;
+    color: $darkblack;
+
+    &:hover {
+      color: $lightblue;
+    }
+
+    &:active {
+      color: rgba(0, 0, 0, 0.3);
+    }
+
+  }
+
+  .site-list__link[href] {
+
+    color: #766357;
+
+    &:hover {
+      color: #604e43;
+    }
+
+    &:active {
+      color: rgba(118, 99, 87, 0.3);
+    }
+
+  }
+
+  @media (min-width: $desktop-width) {
+    .site-list {
+
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+      flex-grow: 1;
+
+      background-color: $white;
+    }
+
+    .site-list__item {
+      margin-right: 92px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+
+    .site-list__link {
+      padding: 25px 0 23px;
+
+      background: none;
+      border: none;
+      color: $darkblack;
+
+      &:hover {
+        color: $lightblue;
+      }
+
+      &:active {
+        color: rgba(0, 0, 0, 0.3);
+      }
+
+    }
+
+    .site-list__link[href] {
+
+      color: #766357;
+
+      &:hover {
+        color: #604e43;
+      }
+
+      &:active {
+        color: rgba(118, 99, 87, 0.3);
+      }
+
+    }
