--- a/source/sass/global/main-nav.scss
+++ b/source/sass/global/main-nav.scss
@@ -1,15 +1,158 @@
 .main-nav {
-  width: 320px;
+  position: relative;
+  width: auto;
+  min-height: 55px;
   margin: 0 auto;
+  background-color: $lightblue;
 }
 
 .main-nav__list {
   @include reset-list;
 }
 
+.main-nav__toggle {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+
+  display: block;
+  width: 70px;
+  height: 50px;
+
+  background-color: #6a4d38;
+
+  cursor: pointer;
+  border: none;
+
+  &:active,
+  &:hover {
+    background-color: $lightblue;
+  }
+}
+
+.main-nav--closed .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 15px;
+  left: 17px;
+
+  width: 36px;
+  height: 2px;
+  background-color: $white;
+  box-shadow: 0 8px 0 0 $lightblue, 0 16px 0 0 $lightblue;
+}
+/*или загружать svg для иконки закрытого меню?
+тот, который нам дали в папке img, черного цвета - вставила его и сделала fill  */
+
+.main-nav--closed .main-nav__toggle:active::before {
+  background-color: $white;
+  box-shadow: 0 8px 0 0 $lightblue, 0 16px 0 0 $lightblue;
+}
+
+.main-nav--opened .main-nav__toggle {
+  top: 0;
+  right: 0;
+  left: auto;
+
+  &::after,
+  &::before {
+    content: "";
+
+    position: absolute;
+    top: 24px;
+    left: 18px;
+
+    width: 36px;
+    height: 2px;
+    background-color: $white;
+  }
+
+  &::before {
+    transform: rotate(45deg);
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
+
+  &:active::after,
+  &:active::before {
+    background-color: $lightblue;
+  }
+}
+
+@media (max-width: $mobile-width-only) {
+  .main-nav--closed .site-list__item {
+    display: none;
+  }
+
+  &--active {
+    display: block;
+  }
+
+  .main-nav--closed .site-list__item--active a {
+    padding-right: 100px;
+    padding-left: 100px;
+
+    text-align: center;
+  }
+
+  .main-nav--opened {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 10;
+
+    min-height: 220px;
+    background-color: $lightblue;
+  }
+
+  .main-nav--nojs .main-nav__toggle {
+    display: none;
+  }
+
+  .main-nav--nojs .main-nav__list {
+    position: static;
+    min-height: 0;
+  }
+
+  .main-nav--nojs .site-list__item {
+    display: block;
+  }
+
+  .main-nav--nojs .site-list__item--active a {
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+    text-align: center;
+  }
+}
+
 @media (min-width: $tablet-width) {
   .main-nav {
     width: auto;
     margin: 0 auto;
+
+    background-color: $white;
+  }
+
+  .main-nav__list {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+
+    width: 90%;
+  }
+
+  .main-nav__toggle {
+    display: none;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .main-nav__list {
+    width: 960px;
   }
 }
