--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -109,7 +109,6 @@
       &:active {
         color: rgba(0, 0, 0, 0.3);
       }
-
     }
 
     .site-list__link[href] {
@@ -123,5 +122,5 @@
       &:active {
         color: rgba(118, 99, 87, 0.3);
       }
-
     }
+  }
