--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -12,3 +12,6 @@ $mobile-width: 320px;
 $tablet-width: 768px;
 $desktop-width: 1200px;
 $mobile-width-only: 767px;
+
+/*переменная для ретинизации*/
+$retina-dppx: 1.5dppx;
