--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -25,7 +25,10 @@
 
 .intro__wrapper-text {
   padding-top: 44px;
-  margin: 0 auto 33px;
+  margin-left: 23px;
+  margin-right: 21px;
+  margin-bottom: 22px;
+  text-align: center;
 }
 
 @media (min-width: $tablet-width) {
