--- a/source/sass/base/body.scss
+++ b/source/sass/base/body.scss
@@ -9,11 +9,17 @@ html {
 }
 
 body {
-  font-size: 14px;
+  min-width: 320px;
+  padding: 0;
+  margin: 0;
+
   font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 14px;
   line-height: 24px;
   font-weight: normal;
   color: $lighterblack;
+  font-style: normal;
+
   background-color: $white-greyish;
 }
 
