--- a/source/sass/global/button.scss
+++ b/source/sass/global/button.scss
@@ -1,6 +1,17 @@
 .button {
   width: 250px;
   height: 58px;
-  background-color: #81b3d2;
   display: block;
+  margin: 0 auto;
+
+  font-size: 21px;
+  font-weight: bold;
+  font-style: normal;
+  line-height: 26px;
+  text-align: center;
+  color: $white;
+  text-transform: uppercase;
+
+  background-color: $lightblue;
+
 }
