--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -12,10 +12,14 @@
 .promo__image {
   order: 2;
   width: 320px;
-  height: 3383px;
+  height: 389px;
+
+  background-image: url("img/bg-back-mobile@1x.jpg");
+  background-repeat: no-repeat;
 }
 
 .promo__slogan {
+  order: 2;
   margin: 0 auto;
 }
 
@@ -48,6 +52,14 @@
     width: 768px;
     height: 518px;
     object-fit: contain;
+
+    background-image: url("img/bg-back-tablet@1x.jpg");
+    background-repeat: no-repeat;
+
+    @media (min-resolution: $retina-dppx) {
+      background-image: url("img/bg-back-tablet@2x.jpg");
+      background-size: 1338px auto;
+    }
   }
 
   .promo__text {
@@ -71,6 +83,9 @@
     width: 1200px;
     height: 518px;
     object-fit: contain;
+
+    background-image: url("img/bg-back-desktop@1x.jpg");
+    background-repeat: no-repeat;
   }
 
   .promo__text {
