--- a/source/sass/global/main-nav.scss
+++ b/source/sass/global/main-nav.scss
@@ -20,7 +20,7 @@
   width: 70px;
   height: 50px;
 
-  background-color: #6a4d38;
+  background-color: $lightblue;
 
   cursor: pointer;
   border: none;
@@ -42,8 +42,6 @@
   background-color: $white;
   box-shadow: 0 8px 0 0 $lightblue, 0 16px 0 0 $lightblue;
 }
-/*или загружать svg для иконки закрытого меню?
-тот, который нам дали в папке img, черного цвета - вставила его и сделала fill  */
 
 .main-nav--closed .main-nav__toggle:active::before {
   background-color: $white;
