--- a/source/sass/blocks/search-hotel.scss
+++ b/source/sass/blocks/search-hotel.scss
@@ -5,6 +5,11 @@
   background-color: white;
 }
 
+.search-hotel__wrapper {
+  width: 260px;
+  margin: 0 auto 40px;
+}
+
 .search-hotel__title {
   @include reset-text;
   font-size: 21px;
@@ -16,6 +21,7 @@
 
 .search-hotel__text {
   @include reset-text;
+  margin-top: 33px;
   font-size: 14px;
   line-height: 24px;
   text-transform: uppercase;
@@ -24,6 +30,9 @@
 }
 
 .search-hotel__show {
+  width: 280px;
+  height: 58px;
+  margin: 0 auto;
   font-size: 21px;
   line-height: 26px;
   font-weight: bold;
@@ -32,15 +41,23 @@
 }
 
 @media (min-width: $tablet-width) {
-  .search-hotel {
-    margin: 0 auto 58px;
-    padding-top: 57px;
+  .search-hotel__wrapper {
+    width: 434px;
+    min-height: 98px;
+    margin-bottom: 47px;
   }
+
+  .search-hotel__show {
+    width: 458px;
+    padding-left: 136px;
+    padding-right: 136px;
+  }
+
 }
 
 @media (min-width: $desktop-width) {
-  .search-hotel {
-    padding-top: 57px;
-    margin: 0 auto 66px;
+  .search-hotel__wrapper {
+    margin-bottom: 52px;
   }
+
 }
