--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -5,6 +5,15 @@
 .advantages__list {
   @include reset-list;
   display: flex;
+  flex-direction: column;
+
+  &--grey {
+    background-color: $grey;
+  }
+
+  &--sub {
+    min-height: 503px;
+  }
 }
 
 .advantages__item {
@@ -17,7 +26,8 @@
 
   &--grey {
     padding-top: 40px;
-    margin: 0 auto;
+    margin: 33px auto 32px;
+    width: 246px;
     background-color: #e6e6e6;
   }
 }
@@ -25,7 +35,9 @@
 .advantages__text-wrapper {
   display: flex;
   flex-direction: column;
-  padding: 53px 67px 63px 68px;
+  //padding: 53px 67px 63px 68px;
+  width: 265px;
+  margin: 0 auto;
 }
 
 .advantages__title {
@@ -40,6 +52,11 @@
   &--white {
     color: #ffffff;
   }
+
+  &--sub {
+    margin-bottom: 26px;
+  }
+
 }
 
 .advantages__argument,
@@ -56,14 +73,18 @@
   }
 }
 
+.advantages__argument {
+  &--sub {
+    margin-top: 30px;
+  }
+}
+
 @media (min-width: $tablet-width) {
-  /*.advantages {
-    width: auto;
-  }*/
 
   .advantages__title {
     width: 50%;
     margin-bottom: 20px;
+    text-align: center;
   }
 
   .advantages__wrapper {
@@ -72,6 +93,12 @@
     width: 87%;
     margin: 63px auto 0;
     min-height: 330px;
+
+    &--housing {
+      width: 155px;
+      margin: 0 auto;
+
+    }
   }
 
   .advantages__section {
@@ -85,9 +112,12 @@
     }
   }
 
-  /*.advantages__list {
-    display: flex;
-  }*/
+  .advantages__list {
+    &--sub {
+      min-height: 256px;
+      flex-direction: row;
+    }
+  }
 
   .advantages__text-wrapper {
     width: 33.33%;
@@ -107,7 +137,6 @@
     &--inversed-order {
       order: 1;
     }
-
   }
 
   .advantages__image {
@@ -117,10 +146,13 @@
   }
 
   .advantages__item {
+    display: flex;
+    text-align: center;
+
     &--grey {
       display: flex;
-      justify-content: space-between;
-      margin-right: 110px;
+      flex-direction: column;
+      width: 159px;
     }
   }
 }
