--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -5,43 +5,55 @@
   text-align: center;
 }
 
+.feedback__wrapper {
+  @include reset-text;
+  display: flex;
+
+  &--contacts {
+    flex-direction: column;
+  }
+}
+
 .feedback__list {
   @include reset-list;
 }
 
 .feedback__fieldset {
   @include reset-fieldset;
-  padding-top: 24px;
   padding-bottom: 25px;
 }
 
 .feedback__fieldset {
+  &--name-surname-patronymic {
+    border-bottom: solid #f2f2f2 1px;
+  }
+
   &--contact-information {
+    padding-top: 24px;
     padding-bottom: 28px;
+    border-bottom: solid #f2f2f2 1px;
   }
-}
 
-.feedback__fieldset {
   &--your-impressions {
+    padding-top: 24px;
     padding-bottom: 26px;
+    border-bottom: solid #f2f2f2 1px;
   }
-}
 
-.feedback__fieldset {
   &--sightseengs-visited {
-    padding-bottom: 25px;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    border-bottom: solid #f2f2f2 1px;
   }
-}
 
-.feedback__fieldset {
   &--your-emotions {
-    padding-bottom: 51px;
+    padding-top: 24px;
+    margin-bottom: 51px;
   }
 }
 
 .feedback__title {
   @include reset-text;
-  padding-bottom: 25px;
   font-size: 18px;
   font-weight: bold;
   font-style: normal;
@@ -49,74 +61,78 @@
   line-height: 26px;
   text-align: center;
   color: $darkblack;
-}
 
-.feedback__title {
+  &--name-surname-patronymic {
+    margin-bottom: 25px;
+  }
+
   &--contact-information {
-    @include reset-text;
     margin-bottom: 29px;
     padding-top: 24px;
-    font-size: 18px;
-    font-weight: bold;
-    font-style: normal;
-    text-transform: uppercase;
-    line-height: 26px;
-    text-align: center;
-    color: $darkblack;
   }
-}
 
-.feedback__title {
   &--your-impressions {
-    @include reset-text;
     margin-bottom: 32px;
     padding-top: 24px;
-    font-size: 18px;
-    font-weight: bold;
-    font-style: normal;
-    text-transform: uppercase;
-    line-height: 26px;
-    text-align: center;
-    color: $darkblack;
   }
-}
 
-.feedback__title {
   &--sightseengs-visited {
-    @include reset-text;
     margin-bottom: 26px;
     padding-top: 24px;
-    font-size: 18px;
-    font-weight: bold;
-    font-style: normal;
-    text-transform: uppercase;
-    line-height: 26px;
-    text-align: center;
-    color: $darkblack;
   }
-}
 
-.feedback__title {
   &--your-emotions {
-    @include reset-text;
     margin-bottom: 21px;
     padding-top: 24px;
-    line-height: 26px;
-    text-align: center;
-    font-size: 18px;
-    font-weight: bold;
-    font-style: normal;
-    text-transform: uppercase;
-    color: $darkblack;
   }
 }
 
 .feedback__label {
+  @include reset-text;
   padding-top: 22px;
   padding-left: 22px;
   padding-bottom: 22px;
   line-height: 26px;
   text-transform: uppercase;
+
+  &--name {
+    margin: 0 14px 0 auto;
+    min-width: 36px;
+  }
+
+  &--surname {
+    margin: 0 13px 0 auto;
+    min-width: 75px;
+  }
+
+  &--patronymic {
+    margin: 0 16px 0 auto;
+    min-width: 70px;
+  }
+
+  &--tel {
+    text-align: left;
+  }
+
+  &--email {
+    text-align: left;
+  }
+
+  &--devils-bridge,
+  &--dont-know-impression,
+  &--mountain-bell,
+  &--negative-impression,
+  &--positive-impression,
+  &--red-cliffs,
+  &--slide-park {
+    font-size: 18px;
+    font-weight: bold;
+    font-style: normal;
+    line-height: 26px;
+    text-align: left;
+    text-transform: none;
+    color: $darkblack;
+  }
 }
 
 .feedback__input {
@@ -128,9 +144,29 @@
   color: #000000;
 
   &--grey {
-    width: auto;
+    //width: auto;
     height: 58px;
     background-color: $white-greyish;
+  }
+
+  &--name {
+    min-width: 230px;
+    margin: 0 auto;
+  }
+
+  &--surname {
+    min-width: 192px;
+    margin: 0 auto;
+  }
+
+  &--patronymic {
+    min-width: 194px;
+    margin: 0 auto;
+  }
+
+  &--tel {
+    min-width: 280px;
+    margin: 0 20px;
   }
 
   &--describe-more {
@@ -139,6 +175,17 @@
     margin-bottom: 51px;
     background-color: $white-greyish;
   }
+}
+
+.feedback__button {
+  width: 280px;
+  height: 58px;
+  margin: 0 auto;
+  font-size: 21px;
+  line-height: 26px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #ffffff;
 }
 
 @media (min-width: $tablet-width) {
@@ -153,43 +200,34 @@
     @include reset-fieldset;
     display: flex;
     flex-wrap: wrap;
-  }
 
-  .feedback__fieldset {
     &--your-impressions {
       order: 1;
       width: 324px;
     }
-  }
 
-  .feedback__fieldset {
     &--present-yourself {
       order: 2;
       width: 324px;
     }
-  }
 
-  .feedback__fieldset {
     &--contact-information {
       width: 648px;
     }
-  }
 
-  .feedback__fieldset {
     &--sightseengs-visited {
       width: 648px;
       display: flex;
       flex-wrap: wrap;
     }
-  }
 
-  .feedback__fieldset {
     &--your-emotions {
       width: 648px;
     }
   }
 
   .feedback__title {
+
     margin-bottom: 60px;
     font-size: 21px;
     font-weight: bold;
@@ -198,38 +236,35 @@
     text-align: left;
     width: 163px;
     color: $darkblack;
-  }
 
-  .feedback__title {
     &--your-impressions {
       margin-bottom: 67px;
       text-align: left;
       width: 273px;
     }
-  }
 
-  .feedback__title {
     &--contact-information {
       margin-bottom: 32px;
       text-align: center;
       width: 297px;
     }
-  }
 
-  .feedback__title {
     &--sightseengs-visited {
       margin-bottom: 48px;
       text-align: center;
       width: 278px;
     }
-  }
 
-  .feedback__title {
     &--your-emotions {
       margin-bottom: 60px;
       text-align: center;
       width: 250px;
     }
+  }
+
+  .feedback__button {
+    width: 324px;
+    padding: 21px 75px 21px 64px;
   }
 }
 
@@ -248,30 +283,22 @@
     flex-wrap: wrap;
     order: 2;
     width: 386px;
-  }
 
-  .feedback__fieldset {
     &--your-impressions {
       order: 1;
       width: 386px;
     }
-  }
 
-  .feedback__fieldset {
     &--contact-information {
       width: 960px;
     }
-  }
 
-  .feedback__fieldset {
     &--sightseengs-visited {
       width: 960px;
       display: flex;
       flex-wrap: wrap;
     }
-  }
 
-  .feedback__fieldset {
     &--your-emotions {
       width: 960px;
     }
@@ -284,37 +311,36 @@
     line-height: 26px;
     text-align: left;
     color: $darkblack;
-  }
 
-  .feedback__title {
     &--your-impressions {
       margin-bottom: 67px;
       width: 273px;
       text-align: left;
     }
-  }
 
-  .feedback__title {
     &--contact-information {
       margin-bottom: 77px;
       width: 279px;
       text-align: center;
     }
-  }
 
-  .feedback__title {
     &--sightseengs-visited {
       margin-bottom: 50px;
       width: 278px;
       text-align: center;
     }
-  }
 
-  .feedback__title {
     &--your-emotions {
       text-align: center;
       width: 250px;
       margin-bottom: 60px;
     }
   }
+
+  .feedback__button {
+    width: 480px;
+    padding-left: 148px;
+    padding-right: 147px;
+  }
+
 }
