--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -7,25 +7,31 @@
   width: 320px;
   height: 389px;
   margin: 0 auto;
-}
 
-.promo__image {
-  order: 2;
-  width: 320px;
-  height: 389px;
-
-  background-image: url("img/bg-back-mobile@1x.jpg");
+  background-color: $lightblue;
+  background-image: url("../img/bg-intro-triangle-mobile.svg"), url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
+
+  //@media (min-resolution: $retina-dppx) {
+  //background-image: url("../img/bg-back-mobile@2x.jpg");
+  //}
+  margin-bottom: 43px;
 }
 
 .promo__slogan {
   order: 2;
+  top: 20%;
+  left: 50%;
   margin: 0 auto;
 }
 
 .promo__text {
   padding-top: 43px;
-  margin: 0 auto 33px;
+  margin: 0 auto;
+  margin-bottom: 10px;
+  width: 255px;
+  text-align: center;
+  min-height: 149px;
 }
 
 .promo__title {
@@ -40,6 +46,7 @@
 
 .promo__argument {
   @include reset-text;
+  margin-top: 30px;
   font-size: 14px;
   text-align: center;
   color: #333333;
@@ -48,23 +55,26 @@
 }
 
 @media (min-width: $tablet-width) {
-  .promo__image {
+  .promo__wrapper {
     width: 768px;
     height: 518px;
     object-fit: contain;
 
-    background-image: url("img/bg-back-tablet@1x.jpg");
+    background-image: url("../img/bg-intro-triangle-tablet.svg"), url("../img/bg-back-tablet@1x.jpg");
     background-repeat: no-repeat;
 
-    @media (min-resolution: $retina-dppx) {
-      background-image: url("img/bg-back-tablet@2x.jpg");
-      background-size: 1338px auto;
-    }
+    //@media (min-resolution: $retina-dppx) {
+    //background-image: url("../img/bg-back-tablet@2x.jpg");
+    //background-size: 1338px auto;
+    //}
+    margin-bottom: 51px;
   }
 
   .promo__text {
-    @include reset-text padding-top: 51px;
-    margin: 0 auto 55px;
+    @include reset-text;
+    width: 490px;
+    margin: 0 auto;
+    margin-bottom: 55px;
   }
 
   .promo__title {
@@ -79,12 +89,12 @@
 }
 
 @media (min-width: $desktop-width) {
-  .promo__image {
+  .promo__wrapper {
     width: 1200px;
     height: 518px;
     object-fit: contain;
 
-    background-image: url("img/bg-back-desktop@1x.jpg");
+    background-image: url("../img/bg-back-desktop@1x.jpg");
     background-repeat: no-repeat;
   }
 
