--- a/source/sass/global/button.scss
+++ b/source/sass/global/button.scss
@@ -1,6 +1,6 @@
 .button {
   width: 250px;
-  height: 58px;
+  padding: 17px 47px 19px;
   display: block;
   margin: 0 auto;
 
@@ -12,6 +12,21 @@
   color: $white;
   text-transform: uppercase;
 
-  background-color: $lightblue;
+  &--blue {
+    background-color: $lightblue;
+  }
 
+  &:hover {
+    background-color: #669ec0;
+  }
+
+  &:active {
+    color: rgba(255, 255, 255, 0.3);
+    background-color: #5496bd;
+  }
+
+  &:disabled {
+    color: $white;
+    background-color: #e5e5e5;
+  }
 }
