--- a/source/sass/global/page-header.scss
+++ b/source/sass/global/page-header.scss
@@ -1,7 +1,4 @@
 .page-header {
-  display: flex;
-  flex-wrap: wrap;
-  /*background-color: #81b3d2;*/
   font-size: 18px;
   font-weight: bold;
   line-height: 40px;
@@ -16,23 +13,31 @@
   height: 83px;
 }
 
+.page-header__logo-wrapper {
+  position: absolute;
+  width: 102px;
+  height: 83px;
+  top: 100%;
+  left: 40%;
+}
+
 @media (min-width: $tablet-width) {
-  .page-header__logo {
+  .page-header__logo-wrapper {
+    position: absolute;
     width: 187px;
     height: 97px;
-  }
-
-  .page-header__logo--wrapper {
-    position: absolute;
-    top: 120;
-    bottom: 20;
+    top: 0;
+    left: 50%;
+    margin-left: -93.5px;
   }
 
 }
 
 @media (min-width: $desktop-width) {
-  .page-header__logo {
+  .page-header__logo-wrapper {
     width: 188px;
     height: 96px;
+    left: 47%;
+    margin-left: -94px;
   }
 }
