--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -8,6 +8,9 @@
 .feedback__wrapper {
   @include reset-text;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
 
   &--contacts {
     flex-direction: column;
@@ -21,34 +24,42 @@
 .feedback__fieldset {
   @include reset-fieldset;
   padding-bottom: 25px;
-}
 
-.feedback__fieldset {
   &--name-surname-patronymic {
     border-bottom: solid #f2f2f2 1px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 
   &--contact-information {
     padding-top: 24px;
     padding-bottom: 28px;
+    margin-left: 20px;
+    margin-right: 20px;
     border-bottom: solid #f2f2f2 1px;
   }
 
   &--your-impressions {
     padding-top: 24px;
     padding-bottom: 26px;
+    margin-left: 23px;
+    margin-right: 37px;
     border-bottom: solid #f2f2f2 1px;
   }
 
   &--sightseengs-visited {
     padding-top: 24px;
     padding-bottom: 24px;
+    margin-left: 22px;
+    margin-right: 41px;
     border-bottom: solid #f2f2f2 1px;
   }
 
   &--your-emotions {
     padding-top: 24px;
     margin-bottom: 51px;
+    margin-left: 19px;
+    margin-right: 22px;
   }
 }
 
@@ -89,26 +100,9 @@
 
 .feedback__label {
   @include reset-text;
-  padding-top: 22px;
-  padding-left: 22px;
-  padding-bottom: 22px;
   line-height: 26px;
+  margin-right: 15px;
   text-transform: uppercase;
-
-  &--name {
-    margin: 0 14px 0 auto;
-    min-width: 36px;
-  }
-
-  &--surname {
-    margin: 0 13px 0 auto;
-    min-width: 75px;
-  }
-
-  &--patronymic {
-    margin: 0 16px 0 auto;
-    min-width: 70px;
-  }
 
   &--tel {
     text-align: left;
@@ -136,6 +130,8 @@
 }
 
 .feedback__input {
+  min-width: 150px;
+  flex-grow: 1px;
   font-size: 18px;
   font-weight: bold;
   font-style: normal;
@@ -144,29 +140,8 @@
   color: #000000;
 
   &--grey {
-    //width: auto;
     height: 58px;
     background-color: $white-greyish;
-  }
-
-  &--name {
-    min-width: 230px;
-    margin: 0 auto;
-  }
-
-  &--surname {
-    min-width: 192px;
-    margin: 0 auto;
-  }
-
-  &--patronymic {
-    min-width: 194px;
-    margin: 0 auto;
-  }
-
-  &--tel {
-    min-width: 280px;
-    margin: 0 20px;
   }
 
   &--describe-more {
@@ -199,21 +174,24 @@
   .feedback__fieldset {
     @include reset-fieldset;
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
+
+    &--name-surname-patronymic {
+      order: 2;
+      width: 324px;
+    }
 
     &--your-impressions {
       order: 1;
       width: 324px;
     }
 
-    &--present-yourself {
-      order: 2;
-      width: 324px;
-    }
-
     &--contact-information {
+      order: 3;
       width: 648px;
     }
+
 
     &--sightseengs-visited {
       width: 648px;
@@ -264,6 +242,7 @@
 
   .feedback__button {
     width: 324px;
+    text-align: left;
     padding: 21px 75px 21px 64px;
   }
 }
