--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -5,8 +5,6 @@
 
 .site-list__link {
   display: block;
-  padding-top: 20px;
-  padding-bottom: 20px;
 
   font-size: 18px;
   line-height: 40px;
@@ -47,22 +45,6 @@
     margin: 25px 0 23px;
     background: none;
     border: none;
-    color: $darkblack;
-
-    &:hover {
-      color: $lightblue;
-    }
-
-    &:active {
-      color: rgba(0, 0, 0, 0.3);
-    }
-  }
-
-  .site-list__link[href] {
-    padding: 25px 0 23px;
-
-    background: none;
-    border: none;
     color: #766357;
 
     &:hover {
@@ -71,6 +53,21 @@
 
     &:active {
       color: rgba(118, 99, 87, 0.3);
+    }
+  }
+
+  .site-list__link[href] {
+    margin: 25px 0 23px;
+    background: none;
+    border: none;
+    color: $darkblack;
+
+    &:hover {
+      color: $lightblue;
+    }
+
+    &:active {
+      color: rgba(0, 0, 0, 0.3);
     }
   }
 }
