--- a/source/sass/global/main-nav.scss
+++ b/source/sass/global/main-nav.scss
@@ -31,19 +31,19 @@
 
 .main-nav--closed .main-nav__toggle::before {
   content: "";
-  position: absolute;
+  //position: absolute;
   top: 15px;
   left: 17px;
 
   width: 36px;
   height: 2px;
   background-color: $white;
-  //box-shadow: 0 8px 0 0 $lightblue, 0 16px 0 0 $lightblue;
+  box-shadow: 0 8px 0 0 $lightblue, 0 16px 0 0 $lightblue;
 }
 
 .main-nav--closed .main-nav__toggle:active::before {
   background-color: $white;
-  //box-shadow: 0 8px 0 0 $lightblue, 0 16px 0 0 $lightblue;
+  box-shadow: 0 8px 0 0 $lightblue, 0 16px 0 0 $lightblue;
 }
 
 .main-nav--opened .main-nav__toggle {
@@ -149,7 +149,7 @@
   }
 }
 
-@media (min-width: $desktop-width) {
+/*@media (min-width: $desktop-width) {
   .main-nav__list {
   }
-}
+}*/
