--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -131,7 +131,7 @@
 
 .feedback__input {
   min-width: 150px;
-  flex-grow: 1px;
+  flex-grow: 1;
   font-size: 18px;
   font-weight: bold;
   font-style: normal;
@@ -321,5 +321,4 @@
     padding-left: 148px;
     padding-right: 147px;
   }
-
 }
